# Infinity

./: CMakeLists.txt  README.md  main.cpp
engine/: Infinity.h  engine.cpp  engine.h
framework/: App.cpp  App.h  Mesh.cpp  Mesh.h  Primitive.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h
importer/: ReaderMgr.cpp  ReaderMgr.h
objects/: ObjectMesh.cpp  ObjectMesh.h
players/: Player.cpp  Player.h  PlayerOrbit.cpp  PlayerOrbit.h
render/: Render.cpp  Render.h  RenderManager.cpp  RenderManager.h  RenderRenderer.cpp  RenderRenderer.h  RenderState.cpp  RenderState.h  Visualizer.cpp  Visualizer.h
render/framework/: Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  Shader.cpp  Shader.h
utils/: Algorithm.cpp  Algorithm.h  glad.c
world/: Node.cpp  Node.h  World.cpp  World.h
